--- a/MapCsvsToJson/pom.xml
+++ b/MapCsvsToJson/pom.xml
@@ -13,60 +13,52 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <camel.version>2.16.1</camel.version>
-    <slf4j.version>1.7.12</slf4j.version>
-    <log4j.version>1.2.17</log4j.version>
   </properties>
 
   <dependencies>
     <dependency>
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-core</artifactId>
-      <version>${camel.version}</version>
+      <version>2.16.1</version>
     </dependency>
     <dependency>
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-blueprint</artifactId>
-      <version>${camel.version}</version>
+      <version>2.16.1</version>
     </dependency>
         <dependency>
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-bindy</artifactId>
-      <version>${camel.version}</version>
+      <version>2.16.1</version>
     </dependency>
             <dependency>
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-jackson</artifactId>
-      <version>${camel.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.camel</groupId>
-      <artifactId>camel-groovy</artifactId>
-      <version>${camel.version}</version>
+      <version>2.16.1</version>
     </dependency>
 
     <!-- logging -->
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
-      <version>${slf4j.version}</version>
+      <version>1.7.12</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-log4j12</artifactId>
-      <version>${slf4j.version}</version>
+      <version>1.7.12</version>
     </dependency>
     <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
-      <version>${log4j.version}</version>
+      <version>1.2.17</version>
     </dependency>
 
     <!-- Testing -->
     <dependency>
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-test-blueprint</artifactId>
-      <version>${camel.version}</version>
+      <version>2.16.1</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -82,20 +74,7 @@
         <configuration>
           <source>1.7</source>
           <target>1.7</target>
-          <compilerId>groovy-eclipse-compiler</compilerId>
         </configuration>
-        <dependencies>
-          <dependency>
-            <groupId>org.codehaus.groovy</groupId>
-            <artifactId>groovy-eclipse-compiler</artifactId>
-            <version>2.9.2-01</version>
-          </dependency>
-          <dependency>
-            <groupId>org.codehaus.groovy</groupId>
-            <artifactId>groovy-eclipse-batch</artifactId>
-            <version>2.4.3-01</version>
-          </dependency>
-        </dependencies>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -123,8 +102,8 @@
         </executions>
         <configuration>
           <instructions>
-            <Bundle-SymbolicName>org.souciance.integration.csvstojson</Bundle-SymbolicName>
-            <Private-Package>org.souciance.integration.org.souciance.integration.csvstojson.*</Private-Package>
+            <Bundle-SymbolicName>csvstojson</Bundle-SymbolicName>
+            <Private-Package>org.souciance.integration.csvstojson.*</Private-Package>
             <Import-Package>*</Import-Package>
           </instructions>
         </configuration>
@@ -134,7 +113,7 @@
       <plugin>
         <groupId>org.apache.camel</groupId>
         <artifactId>camel-maven-plugin</artifactId>
-        <version>${camel.version}</version>
+        <version>2.16.1</version>
         <configuration>
           <useBlueprint>true</useBlueprint>
         </configuration>
