--- a/MQScriptGenerator/pom.xml
+++ b/MQScriptGenerator/pom.xml
@@ -3,13 +3,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <modelVersion>4.0.0</modelVersion>
-
   <groupId>com.souciance.org</groupId>
   <artifactId>MQScriptGenerator</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
-
-  <name>A Camel Route</name>
+  <name>MQScriptGenerator</name>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -22,7 +20,7 @@
       <dependency>
         <groupId>org.apache.camel</groupId>
         <artifactId>camel-parent</artifactId>
-        <version>2.19.2</version>
+        <version>2.20.0</version>
         <scope>import</scope>
         <type>pom</type>
       </dependency>
@@ -34,8 +32,15 @@
     <dependency>
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-core</artifactId>
+        <version>2.20.0</version>
     </dependency>
-    <dependency>
+      <dependency>
+          <groupId>org.apache.camel</groupId>
+          <artifactId>camel-spring</artifactId>
+          <version>2.20.0</version>
+      </dependency>
+
+      <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-configuration2</artifactId>
       <version>2.1.1</version>
@@ -48,10 +53,12 @@
     <dependency>
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-jsonpath</artifactId>
+        <version>2.20.0</version>
     </dependency>
     <dependency>
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-freemarker</artifactId>
+        <version>2.20.0</version>
     </dependency>
 
     <!-- logging -->
@@ -76,6 +83,7 @@
       <groupId>org.apache.camel</groupId>
       <artifactId>camel-test</artifactId>
       <scope>test</scope>
+        <version>2.20.0</version>
     </dependency>
   </dependencies>
 
@@ -83,6 +91,15 @@
     <defaultGoal>install</defaultGoal>
 
     <plugins>
+      <plugin>
+        <groupId>org.apache.camel</groupId>
+        <artifactId>camel-maven-plugin</artifactId>
+          <version>2.20.0</version>
+        <configuration>
+          <logClasspath>true</logClasspath>
+            <mainClass>com.souciance.org.MainApp</mainClass>
+        </configuration>
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -112,10 +129,42 @@
         </configuration>
       </plugin>
 
-      <plugin>
-        <groupId>org.apache.camel</groupId>
-        <artifactId>camel-maven-plugin</artifactId>
-      </plugin>
+        <plugin>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.20.1</version>
+            <configuration>
+                <additionalClasspathElements>
+                    <additionalClasspathElement>./templates/</additionalClasspathElement>
+                    <additionalClasspathElement>./config/</additionalClasspathElement>
+                    <additionalClasspathElement>./script/</additionalClasspathElement>
+                </additionalClasspathElements>
+            </configuration>
+        </plugin>
+
+       <plugin>
+            <artifactId>maven-assembly-plugin</artifactId>
+            <version>3.1.0</version>
+            <configuration>
+                <descriptorRefs>
+                    <descriptorRef>jar-with-dependencies</descriptorRef>
+                </descriptorRefs>
+              <archive>
+                <manifest>
+                  <mainClass>com.souciance.org.MainApp</mainClass>
+                </manifest>
+              </archive>
+
+            </configuration>
+          <executions>
+            <execution>
+              <id>make-assembly</id>
+              <phase>package</phase>
+              <goals>
+                <goal>single</goal>
+              </goals>
+            </execution>
+            </executions>
+        </plugin>
 
     </plugins>
   </build>
